Add save GPX code to the download page's viewmodel. (ported / copied from the Xamarin version)

--- a/RangemanSync/RangemanSync/RangemanSync.csproj
+++ b/RangemanSync/RangemanSync/RangemanSync.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="BlueToque.SharpGPX" Version="2.22.302" />
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.2.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="Plugin.BLE" Version="3.0.0-beta.2" />
