--- a/RangemanSync/RangemanSync/RangemanSync.csproj
+++ b/RangemanSync/RangemanSync/RangemanSync.csproj
@@ -60,10 +60,8 @@
 	  <PackageReference Include="BlueToque.SharpGPX" Version="2.22.302" />
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.2.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	  <PackageReference Include="MetroLog.Maui" Version="2.1.0" />
     <PackageReference Include="Plugin.BLE" Version="3.0.0-beta.2" />
-	  <PackageReference Include="Serilog" Version="2.12.0" />
-	  <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
-	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
