--- a/RangemanSync/RangemanSync/Platforms/Android/AndroidManifest.xml
+++ b/RangemanSync/RangemanSync/Platforms/Android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true" android:label="Casio GPR-B1000 GPXport"></application>
+	<application android:allowBackup="true" android:icon="@mipmap/appicon_v2" android:roundIcon="@mipmap/appicon_v2_round" android:supportsRtl="true" android:label="Casio GPR-B1000 GPXport"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<!--Add this line to your manifest if you want to declare that your app is available to BLE-capable devices only:-->
