--- a/RangemanSync/RangemanSync/RangemanSync.csproj
+++ b/RangemanSync/RangemanSync/RangemanSync.csproj
@@ -61,6 +61,7 @@
 	  <PackageReference Include="BlueToque.SharpGPX" Version="2.22.302" />
 	  <PackageReference Include="CommunityToolkit.Maui" Version="1.2.0" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	  <PackageReference Include="Mapsui.Maui" Version="4.0.0-beta.8" />
 	  <PackageReference Include="MetroLog.Maui" Version="2.1.0" />
     <PackageReference Include="Plugin.BLE" Version="3.0.0-beta.2" />
 	</ItemGroup>
