Map page works in this version, with just minor bugs

--- a/RangemanSync/RangemanSync/RangemanSync.csproj
+++ b/RangemanSync/RangemanSync/RangemanSync.csproj
@@ -70,6 +70,9 @@
 	  <MauiXaml Update="ConfigPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="MapPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
